testdata/golden/sema/valid/compare_arm_control_flow_block.sg
// scenario: compare arm block used for control flow only
fn demo(flag: bool) -> nothing {
    let mut updated: bool = false;
    compare flag {
        true => compare flag {
            true => {
                updated = true;
            }
            finally => {}
        };
        false => {}
    };
    if updated {
        print("ok");
    }
    return nothing;
}
