testdata/golden/sema/invalid/_builtin_invalid_bool_context.sg
// scenario: non-boolean expression used as an if condition
fn invalid_condition() {
    let number: int = 1;
    if (number) {
        return;
    }
}
